--- a/views/index.html
+++ b/views/index.html
@@ -6,7 +6,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Past Continuous Builder - Learn English Grammar</title>
+  <link rel="stylesheet" href="/css/theme-styles.css">
   <link rel="stylesheet" href="/css/elegant-design.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
@@ -14,7 +16,7 @@
     rel="stylesheet">
 </head>
 
-<body>
+<body class="page-container">
 
   <!-- Navbar -->
   <nav class="navbar">
@@ -28,6 +30,11 @@
           <li><a href="/practice" class="navbar-link">Practice</a></li>
           <li><a href="/views/login.html" class="navbar-link">Login</a></li>
           <li><a href="/views/register.html" class="btn btn-primary btn-sm">Registrarse</a></li>
+          <li>
+            <button id="theme-toggle" class="theme-toggle btn btn-sm btn-outline" aria-label="Toggle theme" style="padding:0.4rem 0.75rem;">
+              <i class="fas fa-sun"></i>
+            </button>
+          </li>
         </ul>
       </div>
     </div>
@@ -150,6 +157,8 @@
       </div>
     </div>
   </footer>
+
+  <script src="/js/main.js"></script>
 
 </body>
 
